--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0403.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0403.html
@@ -842,11 +842,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 146 1137 1826 1198">
-        <span id="w_161" class="ocr_word" title="bbox 146 1143 297 1198" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κινητὸν</ins>
-          </span>
-        </span>
         <span id="w_162" class="ocr_word" title="bbox 321 1144 534 1197" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀεικίνητον</ins>
@@ -1013,7 +1008,7 @@
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1300 1277 1406 1332" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνευ</ins>
+            <ins title="nlp 2.00">[ἄνευ</ins>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1429 1275 1564 1331" lang="grc">
@@ -1154,7 +1149,7 @@
       <span class="ocr_line" title="bbox 147 1485 1830 1544">
         <span id="w_222" class="ocr_word" title="bbox 147 1491 229 1544" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 263 1490 334 1544" lang="grc">
@@ -1588,7 +1583,7 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 533 1976 618 2030" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_308" class="ocr_word" title="bbox 654 1974 726 2028" lang="grc">
@@ -1792,19 +1787,19 @@
             <ins class="alt" title="nlp 1.00">ὅταν</ins>
           </span>
         </span>
-        <span id="w_347" class="ocr_word" title="bbox 1494 2177 1582 2233">
+        <span id="w_347_0" class="ocr_word" title="bbox 1494 2177 1582 2233">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;τις&amp;003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τις&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_347_1" class="ocr_word" title="bbox 1494 2177 1582 2233">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 1602 2177 1742 2230" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">νομίσῃ</ins>
-          </span>
-        </span>
-        <span id="w_349" class="ocr_word" title="bbox 1763 2191 1832 2229" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -2238,8 +2233,7 @@
         </span>
         <span id="w_431" class="ocr_word" title="bbox 1641 2635 1678 2668">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
+            <ins title="nlp 2.00">11</ins>
           </span>
         </span>
         <span id="w_432" class="ocr_word" title="bbox 1708 2646 1754 2670" lang="grc">
@@ -2768,7 +2762,7 @@
         </span>
         <span id="w_529_0" class="ocr_word" title="bbox 1176 3048 1245 3089">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_529_1" class="ocr_word" title="bbox 1176 3048 1245 3089">
