--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0148.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0148.html
@@ -96,9 +96,9 @@
             <ins class="alt" title="nlp 1.00">περιέχουσα·</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 2098 235 2178 272">
+        <span id="w_16_0" class="ocr_word" title="bbox 2098 235 2178 272">
           <span class="alternatives">
-            <ins title="nlp 2.00">221ν</ins>
+            <ins class="alt" title="nlp 2.00">221v</ins>
           </span>
         </span>
       </span>
