--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0358.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0358.html
@@ -601,9 +601,14 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 2059 788 2132 824">
+        <span id="w_115_0" class="ocr_word" title="bbox 2059 788 2132 824">
           <span class="alternatives">
-            <ins title="nlp 2.00">127ν</ins>
+            <ins class="alt" title="nlp 2.00">127</ins>
+          </span>
+        </span>
+        <span id="w_115_1" class="ocr_word" title="bbox 2059 788 2132 824">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">v</ins>
           </span>
         </span>
       </span>
@@ -1471,16 +1476,11 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1953 1758 2070 1812" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀμφι-</ins>
+            <ins title="nlp 2.00">ἀμφιβάλλεται,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 384 1825 2068 1882">
-        <span id="w_284" class="ocr_word" title="bbox 384 1825 580 1880" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βάλλεται,</ins>
-          </span>
-        </span>
         <span id="w_285" class="ocr_word" title="bbox 626 1825 730 1880" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παρὰ</ins>
