--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0404.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0404.html
@@ -316,7 +316,7 @@
         </span>
         <span id="w_58" class="ocr_word" title="bbox 835 504 967 558" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_59" class="ocr_word" title="bbox 998 520 1070 559" lang="grc">
@@ -1264,14 +1264,9 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_246" class="ocr_word" title="bbox 862 1541 870 1557" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_247" class="ocr_word" title="bbox 883 1545 1092 1598" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φιλοσοφία</ins>
+            <ins class="alt" title="nlp 2.00">῾φιλοσοφία</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 1114 1543 1193 1583" lang="grc">
@@ -1604,14 +1599,9 @@
             <ins class="alt" title="nlp 1.00">λέγοντες</ins>
           </span>
         </span>
-        <span id="w_312" class="ocr_word" title="bbox 1617 1890 1624 1905">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_313" class="ocr_word" title="bbox 1637 1906 1697 1931" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ναὶ</ins>
+            <ins class="alt" title="nlp 2.00">῾ναὶ</ins>
           </span>
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1730 1906 1783 1942" lang="grc">
@@ -1851,7 +1841,7 @@
         </span>
         <span id="w_361" class="ocr_word" title="bbox 557 2238 640 2290" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διὰ</ins>
+            <ins title="nlp 2.00">(διὰ</ins>
           </span>
         </span>
         <span id="w_362" class="ocr_word" title="bbox 673 2254 784 2279" lang="grc">
