--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0280.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0280.html
@@ -2271,9 +2271,14 @@
             <ins class="alt" title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_434_1" class="ocr_word" title="bbox 436 2833 461 2870">
+        <span id="w_434_1_0" class="ocr_word" title="bbox 436 2833 461 2870">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τελειωτιχὸν</ins>
+            <ins class="alt" title="nlp 2.00">τελειωτικὸν</ins>
+          </span>
+        </span>
+        <span id="w_434_1_1" class="ocr_word" title="bbox 436 2833 461 2870">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_435" class="ocr_word" title="bbox 493 2819 735 2856" lang="grc">
@@ -2319,11 +2324,6 @@
         <span id="w_443" class="ocr_word" title="bbox 1854 2833 1896 2857" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_444" class="ocr_word" title="bbox 1937 2816 2008 2870">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -2652,8 +2652,7 @@
         </span>
         <span id="w_507" class="ocr_word" title="bbox 1790 3133 1839 3153">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xcu</ins>
-            <del title="nlp 0.90">xcu</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span id="w_508" class="ocr_word" title="bbox 1868 3131 1910 3153">
@@ -2683,7 +2682,7 @@
       <span class="ocr_line" title="bbox 367 3174 610 3219">
         <span id="w_512" class="ocr_word" title="bbox 367 3174 411 3208" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">38 ἣ]εἰ HP</ins>
+            <ins title="nlp 2.00">ἣ]εἰ HP</ins>
           </span>
         </span>
       </span>
