--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0405.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0405.html
@@ -393,9 +393,9 @@
             <ins title="nlp 2.00">ις΄.</ins>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 1835 861 1917 897">
+        <span id="w_74_0" class="ocr_word" title="bbox 1835 861 1917 897">
           <span class="alternatives">
-            <ins title="nlp 2.00">149r</ins>
+            <ins class="alt" title="nlp 2.00">149v</ins>
           </span>
         </span>
       </span>
@@ -1508,7 +1508,7 @@
       <span class="ocr_line" title="bbox 181 2235 1861 2292">
         <span id="w_291" class="ocr_word" title="bbox 181 2239 284 2292" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντὶ</ins>
+            <ins title="nlp 2.00">(ἀντὶ</ins>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 320 2237 391 2292" lang="grc">
@@ -1563,7 +1563,7 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1650 2236 1753 2290" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντὶ</ins>
+            <ins title="nlp 2.00">(ἀντὶ</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1789 2236 1861 2291" lang="grc">
