--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0359.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0359.html
@@ -666,9 +666,9 @@
             <ins class="alt" title="nlp 1.00">τῇ</ins>
           </span>
         </span>
-        <span id="w_127" class="ocr_word" title="bbox 1818 959 1896 995">
+        <span id="w_127_0" class="ocr_word" title="bbox 1818 959 1896 995">
           <span class="alternatives">
-            <ins title="nlp 2.00">128</ins>
+            <ins class="alt" title="nlp 2.00">128r</ins>
           </span>
         </span>
       </span>
