--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0149.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0149.html
@@ -2075,9 +2075,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_394" class="ocr_word" title="bbox 918 2806 1060 2849" lang="grc">
+        <span id="w_394_0" class="ocr_word" title="bbox 918 2806 1060 2849">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀμφοτερογλώσσου</ins>
+            <ins class="alt" title="nlp 2.00">ἐνόμησε</ins>
+          </span>
+        </span>
+        <span id="w_394_1" class="ocr_word" title="bbox 918 2806 1060 2849">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_395" class="ocr_word" title="bbox 1087 2805 1111 2838">
@@ -2107,11 +2112,6 @@
             <ins class="alt" title="nlp 1.00">ποτὲ</ins>
           </span>
         </span>
-        <span id="w_400" class="ocr_word" title="bbox 1818 2801 1880 2835" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διδ.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 73 2860 1880 2910">
         <span id="w_401" class="ocr_word" title="bbox 73 2863 146 2895">
@@ -2137,9 +2137,14 @@
             <ins class="alt" title="nlp 1.00">ἐκ</ins>
           </span>
         </span>
-        <span id="w_405" class="ocr_word" title="bbox 468 2864 554 2905" lang="grc">
+        <span id="w_405_0" class="ocr_word" title="bbox 468 2864 554 2905">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;δὲ?&amp;#x003Ε;?</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;δε&amp;x003E;]?</ins>
+          </span>
+        </span>
+        <span id="w_405_1" class="ocr_word" title="bbox 468 2864 554 2905">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_406" class="ocr_word" title="bbox 725 2864 763 2897">
@@ -2175,11 +2180,6 @@
         <span id="w_412" class="ocr_word" title="bbox 1662 2862 1706 2894">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">20</ins>
-          </span>
-        </span>
-        <span id="w_413" class="ocr_word" title="bbox 1731 2860 1783 2894" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διὰ—ὄν</ins>
           </span>
         </span>
       </span>
