--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0281.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0281.html
@@ -1946,9 +1946,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 110 2541 1787 2596">
-        <span id="w_377" class="ocr_word" title="bbox 110 2551 346 2590">
+        <span id="w_377_0" class="ocr_word" title="bbox 110 2551 346 2590">
           <span class="alternatives">
-            <ins title="nlp 2.00">πραγματείχ,</ins>
+            <ins class="alt" title="nlp 2.00">πραγματεία,</ins>
+          </span>
+        </span>
+        <span id="w_377_1" class="ocr_word" title="bbox 110 2551 346 2590">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_379" class="ocr_word" title="bbox 415 2554 523 2593" lang="grc">
@@ -1984,11 +1989,6 @@
         <span id="w_385" class="ocr_word" title="bbox 1295 2541 1552 2596" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀποφαντικὸν</ins>
-          </span>
-        </span>
-        <span id="w_386" class="ocr_word" title="bbox 1596 2544 1787 2584" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰλεῖσθαι</ins>
           </span>
         </span>
       </span>
