--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0282.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0282.html
@@ -1346,7 +1346,7 @@
         </span>
         <span id="w_259" class="ocr_word" title="bbox 807 1673 908 1726" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἅμα</ins>
+            <ins title="nlp 2.00">(ἅμα</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 938 1672 1010 1727" lang="grc">
@@ -2377,9 +2377,14 @@
             <ins class="alt" title="nlp 1.00">6</ins>
           </span>
         </span>
-        <span id="w_458" class="ocr_word" title="bbox 1652 2848 1774 2882" lang="grc">
+        <span id="w_458_0" class="ocr_word" title="bbox 1652 2848 1774 2882">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλλ’-ἀναιρεῖ</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλ’—ἀναιρεῖ</ins>
+          </span>
+        </span>
+        <span id="w_458_1" class="ocr_word" title="bbox 1652 2848 1774 2882">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_459" class="ocr_word" title="bbox 1932 2847 1979 2889" lang="grc">
@@ -2391,12 +2396,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_461" class="ocr_word" title="bbox 2096 2845 2120 2878">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
           </span>
         </span>
       </span>
