--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0150.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0150.html
@@ -100,9 +100,9 @@
             <ins class="alt" title="nlp 1.00">ἔστι</ins>
           </span>
         </span>
-        <span id="w_17" class="ocr_word" title="bbox 2089 239 2170 274" lang="grc">
+        <span id="w_17_0" class="ocr_word" title="bbox 2089 239 2170 274">
           <span class="alternatives">
-            <ins title="nlp 2.00">ν</ins>
+            <ins class="alt" title="nlp 2.00">222v</ins>
           </span>
         </span>
       </span>
@@ -2121,7 +2121,7 @@
         </span>
         <span id="w_409" class="ocr_word" title="bbox 1640 2609 1760 2652" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πάντῃ</ins>
+            <ins title="nlp 2.00">πάντῃ</ins>
           </span>
         </span>
         <span id="w_410" class="ocr_word" title="bbox 1783 2608 1817 2649">
