--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0360.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0360.html
@@ -748,9 +748,14 @@
             <ins class="alt" title="nlp 1.00">πρᾶγμα</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 2083 1001 2160 1036">
+        <span id="w_143_0" class="ocr_word" title="bbox 2083 1001 2160 1036">
           <span class="alternatives">
-            <ins title="nlp 2.00">128ν</ins>
+            <ins class="alt" title="nlp 2.00">128</ins>
+          </span>
+        </span>
+        <span id="w_143_1" class="ocr_word" title="bbox 2083 1001 2160 1036">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">v</ins>
           </span>
         </span>
       </span>
@@ -1132,9 +1137,14 @@
             <ins class="alt" title="nlp 1.00">δῆλον</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1122 1479 1223 1535">
+        <span id="w_218_0" class="ocr_word" title="bbox 1122 1479 1223 1535">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὖν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οὖν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_218_1" class="ocr_word" title="bbox 1122 1479 1223 1535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1256 1496 1313 1520" lang="grc">
@@ -1165,11 +1175,6 @@
         <span id="w_224" class="ocr_word" title="bbox 1933 1497 2008 1535" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄρα</ins>
-          </span>
-        </span>
-        <span id="w_225" class="ocr_word" title="bbox 2038 1497 2104 1521" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὖν</ins>
           </span>
         </span>
       </span>
