--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0362.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0362.html
@@ -917,9 +917,14 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_175" class="ocr_word" title="bbox 2087 1128 2167 1163" lang="grc">
+        <span id="w_175_0" class="ocr_word" title="bbox 2087 1128 2167 1163">
           <span class="alternatives">
-            <ins title="nlp 2.00">129ν</ins>
+            <ins class="alt" title="nlp 2.00">129</ins>
+          </span>
+        </span>
+        <span id="w_175_1" class="ocr_word" title="bbox 2087 1128 2167 1163">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">v</ins>
           </span>
         </span>
       </span>
@@ -1016,9 +1021,14 @@
             <ins class="alt" title="nlp 1.00">δῆλον</ins>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1277 1262 1377 1318">
+        <span id="w_194_0" class="ocr_word" title="bbox 1277 1262 1377 1318">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003Cοὖν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οὖν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_194_1" class="ocr_word" title="bbox 1277 1262 1377 1318">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1416 1279 1472 1303" lang="grc">
@@ -1044,11 +1054,6 @@
         <span id="w_199" class="ocr_word" title="bbox 1842 1277 1905 1302" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_200" class="ocr_word" title="bbox 1941 1277 2101 1315" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐρανὸν</ins>
           </span>
         </span>
       </span>
@@ -1998,7 +2003,7 @@
         </span>
         <span id="w_384" class="ocr_word" title="bbox 1020 2678 1049 2721" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ</ins>
+            <ins title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_385" class="ocr_word" title="bbox 1068 2691 1133 2714">
@@ -2268,7 +2273,7 @@
         </span>
         <span id="w_432" class="ocr_word" title="bbox 1039 2856 1083 2889" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">20 καταπαύσομεν</ins>
+            <ins title="nlp 2.00">καταπαύσομεν</ins>
           </span>
         </span>
         <span id="w_433" class="ocr_word" title="bbox 1405 2859 1435 2891">
@@ -2733,7 +2738,7 @@
         </span>
         <span id="w_517" class="ocr_word" title="bbox 1155 3210 1250 3254" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(εἶναι</ins>
+            <ins title="nlp 2.00">εἶναι</ins>
           </span>
         </span>
         <span id="w_518" class="ocr_word" title="bbox 1277 3214 1356 3254">
