--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0406.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0406.html
@@ -1020,7 +1020,7 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 1204 1345 1244 1399" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1282 1361 1353 1400" lang="grc">
@@ -1789,7 +1789,7 @@
         </span>
         <span id="w_346" class="ocr_word" title="bbox 972 2177 1133 2231" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεταξὺ</ins>
+            <ins title="nlp 2.00">(μεταξὺ</ins>
           </span>
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1166 2177 1239 2231" lang="grc">
@@ -2542,7 +2542,7 @@
         </span>
         <span id="w_489" class="ocr_word" title="bbox 2097 2887 2154 2909" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κά·</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
