--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0283.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0283.html
@@ -438,7 +438,7 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 853 923 936 977" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καἲ</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 969 926 1069 977" lang="grc">
@@ -954,9 +954,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 123 1543 1799 1601">
-        <span id="w_182" class="ocr_word" title="bbox 123 1543 190 1600">
+        <span id="w_182_0" class="ocr_word" title="bbox 123 1543 190 1600">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_182_1" class="ocr_word" title="bbox 123 1543 190 1600">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 221 1544 365 1594" lang="grc">
@@ -1007,11 +1012,6 @@
         <span id="w_192" class="ocr_word" title="bbox 1516 1546 1720 1587" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπινοεῖται</ins>
-          </span>
-        </span>
-        <span id="w_193" class="ocr_word" title="bbox 1759 1562 1799 1585" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -1864,7 +1864,7 @@
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1144 2513 1282 2566" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μέσον</ins>
+            <ins title="nlp 2.00">(μέσον</ins>
           </span>
         </span>
         <span id="w_359" class="ocr_word" title="bbox 1315 2527 1356 2553" lang="grc">
@@ -2058,14 +2058,14 @@
             <ins class="alt" title="nlp 1.00">ἔμμεσα</ins>
           </span>
         </span>
-        <span id="w_396" class="ocr_word" title="bbox 1401 2715 1730 2772" lang="grc">
+        <span id="w_396_0" class="ocr_word" title="bbox 1401 2715 1730 2772">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὑποδιαιρεῖται&amp;#x003E;·</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὑποδιαιρεῖται&amp;#x003Ε;·</ins>
           </span>
         </span>
-        <span id="w_397" class="ocr_word" title="bbox 1777 2732 1801 2769" lang="grc">
+        <span id="w_396_1" class="ocr_word" title="bbox 1401 2715 1730 2772">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἢ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2075,9 +2075,14 @@
             <ins class="alt" title="nlp 1.00">ὥρισται</ins>
           </span>
         </span>
-        <span id="w_399" class="ocr_word" title="bbox 315 2784 396 2840" lang="grc">
+        <span id="w_399_0" class="ocr_word" title="bbox 315 2784 396 2840">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈καὶ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;καὶ</ins>
+          </span>
+        </span>
+        <span id="w_399_1" class="ocr_word" title="bbox 315 2784 396 2840">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_400" class="ocr_word" title="bbox 427 2786 473 2826" lang="grc">
@@ -2085,9 +2090,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 505 2786 621 2840" lang="grc">
+        <span id="w_401_0" class="ocr_word" title="bbox 505 2786 621 2840">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄκρα〉</ins>
+            <ins class="alt" title="nlp 2.00">ἄκρα&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_401_1" class="ocr_word" title="bbox 505 2786 621 2840">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 654 2788 717 2827" lang="grc">
@@ -2130,16 +2140,6 @@
             <ins class="alt" title="nlp 1.00">ψυχροῦ</ins>
           </span>
         </span>
-        <span id="w_410" class="ocr_word" title="bbox 1642 2786 1704 2825" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_411" class="ocr_word" title="bbox 1735 2799 1801 2824" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 131 2852 1804 2910">
         <span id="w_412" class="ocr_word" title="bbox 131 2854 292 2906">
@@ -2149,7 +2149,7 @@
         </span>
         <span id="w_413" class="ocr_word" title="bbox 327 2857 460 2906" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_414" class="ocr_word" title="bbox 492 2855 563 2909" lang="grc">
