--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0363.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0363.html
@@ -2511,7 +2511,7 @@
       <span class="ocr_line" title="bbox 101 2981 1860 3034">
         <span id="w_480" class="ocr_word" title="bbox 101 2989 230 3024">
           <span class="alternatives">
-            <ins title="nlp 2.00">19—21</ins>
+            <ins title="nlp 2.00">—21</ins>
           </span>
         </span>
         <span id="w_481" class="ocr_word" title="bbox 258 3002 326 3023" lang="grc">
