--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0407.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0407.html
@@ -1095,7 +1095,7 @@
         </span>
         <span id="w_213" class="ocr_word" title="bbox 491 1351 621 1404" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὗτος</ins>
+            <ins title="nlp 2.00">(οὗτος</ins>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 652 1349 723 1404" lang="grc">
