--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0279.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0279.html
@@ -686,7 +686,7 @@
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1174 763 1237 815" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
+            <ins title="nlp 2.00">τὸ</ins>
           </span>
         </span>
         <span id="w_131" class="ocr_word" title="bbox 1260 779 1330 816" lang="grc">
@@ -1361,29 +1361,29 @@
             <ins class="alt" title="nlp 1.00">νοῆσαι</ins>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 1181 1788 1244 1812" lang="grc">
+        <span id="w_261_0" class="ocr_word" title="bbox 1181 1788 1244 1812">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_262" class="ocr_word" title="bbox 1275 1787 1540 1826" lang="grc">
+        <span id="w_261_1" class="ocr_word" title="bbox 1181 1788 1244 1812">
           <span class="alternatives">
-            <ins title="nlp 2.00">γενιχώτατον.</ins>
+            <ins class="alt" title="nlp 2.00"/>
+          </span>
+        </span>
+        <span id="w_262_0" class="ocr_word" title="bbox 1275 1787 1540 1826">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">γενικώτατον.</ins>
+          </span>
+        </span>
+        <span id="w_262_1" class="ocr_word" title="bbox 1275 1787 1540 1826">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1603 1788 1634 1812" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰ</ins>
-          </span>
-        </span>
-        <span id="w_264" class="ocr_word" title="bbox 1666 1787 1708 1812" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δέ</ins>
-          </span>
-        </span>
-        <span id="w_265" class="ocr_word" title="bbox 1740 1789 1794 1817" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τις</ins>
           </span>
         </span>
       </span>
@@ -1547,9 +1547,9 @@
             <ins class="alt" title="nlp 1.00">πάσης</ins>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 1681 1995 1792 2033" lang="grc">
+        <span id="w_297_0" class="ocr_word" title="bbox 1681 1995 1792 2033">
           <span class="alternatives">
-            <ins title="nlp 2.00">χατηγορίας,</ins>
+            <ins class="alt" title="nlp 2.00">κατηγορίας,</ins>
           </span>
         </span>
       </span>
@@ -1824,7 +1824,7 @@
         </span>
         <span id="w_352" class="ocr_word" title="bbox 916 2323 1009 2376" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰσὶ</ins>
+            <ins title="nlp 2.00">εἰσὶ</ins>
           </span>
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1031 2339 1101 2377" lang="grc">
@@ -2080,9 +2080,14 @@
             <ins class="alt" title="nlp 1.00">ὁδὸς</ins>
           </span>
         </span>
-        <span id="w_403" class="ocr_word" title="bbox 1219 2598 1332 2654" lang="grc">
+        <span id="w_403_0" class="ocr_word" title="bbox 1219 2598 1332 2654">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈ἀπὸ〉</ins>
+            <ins class="alt" title="nlp 2.00">Ε;</ins>
+          </span>
+        </span>
+        <span id="w_403_1" class="ocr_word" title="bbox 1219 2598 1332 2654">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_404" class="ocr_word" title="bbox 1350 2599 1358 2614" lang="grc">
@@ -2093,11 +2098,6 @@
         <span id="w_405" class="ocr_word" title="bbox 1571 2615 1623 2643" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_406" class="ocr_word" title="bbox 1656 2598 1790 2654" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Θήβας</ins>
           </span>
         </span>
       </span>
@@ -2184,12 +2184,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 15 2733 1786 2792">
-        <span id="w_423" class="ocr_word" title="bbox 15 2744 18 2788">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">j</ins>
-            <del title="nlp 0.90">j</del>
-          </span>
-        </span>
         <span id="w_424" class="ocr_word" title="bbox 51 2744 91 2776">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">35</ins>
