--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0408.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0408.html
@@ -2300,8 +2300,7 @@
         </span>
         <span id="w_444" class="ocr_word" title="bbox 1085 2937 1115 2969">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_445" class="ocr_word" title="bbox 1289 2936 1330 2970">
