--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0278.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0278.html
@@ -955,9 +955,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_182" class="ocr_word" title="bbox 538 1168 825 1207" lang="grc">
+        <span id="w_182_0" class="ocr_word" title="bbox 538 1168 825 1207">
           <span class="alternatives">
-            <ins title="nlp 2.00">γραμματιχῆς·</ins>
+            <ins class="alt" title="nlp 2.00">γραμματικῆς·</ins>
+          </span>
+        </span>
+        <span id="w_182_1" class="ocr_word" title="bbox 538 1168 825 1207">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_183" class="ocr_word" title="bbox 872 1167 962 1192" lang="grc">
@@ -995,11 +1000,6 @@
             <ins class="alt" title="nlp 1.00">λεγόμεθα</ins>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 2048 1151 2125 1191" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἑπιστήμονες</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 440 1220 2122 1275">
         <span id="w_192" class="ocr_word" title="bbox 660 1237 770 1262" lang="grc">
@@ -1019,7 +1019,7 @@
         </span>
         <span id="w_195" class="ocr_word" title="bbox 1163 1220 1274 1274" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐδὲ</ins>
+            <ins title="nlp 2.00">οὐδὲ</ins>
           </span>
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1312 1221 1383 1275" lang="grc">
@@ -2185,7 +2185,7 @@
         </span>
         <span id="w_420_0" class="ocr_word" title="bbox 1919 2462 2024 2518">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἀλλ’</ins>
+            <ins class="alt" title="nlp 2.00">ἀλλ’</ins>
           </span>
         </span>
         <span id="w_420_1" class="ocr_word" title="bbox 1919 2462 2024 2518">
@@ -2207,7 +2207,7 @@
         </span>
         <span id="w_424_0" class="ocr_word" title="bbox 629 2531 770 2587">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐχρῆν&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_424_1" class="ocr_word" title="bbox 629 2531 770 2587">
@@ -2274,7 +2274,7 @@
         </span>
         <span id="w_437" class="ocr_word" title="bbox 646 2601 725 2655" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[οὐ]</ins>
+            <ins title="nlp 2.00">οὐ]</ins>
           </span>
         </span>
         <span id="w_438" class="ocr_word" title="bbox 760 2617 854 2655" lang="grc">
