--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0366.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0366.html
@@ -1676,9 +1676,14 @@
             <ins class="alt" title="nlp 1.00">αὐτὴν</ins>
           </span>
         </span>
-        <span id="w_323" class="ocr_word" title="bbox 2142 2014 2212 2051">
+        <span id="w_323_0" class="ocr_word" title="bbox 2142 2014 2212 2051">
           <span class="alternatives">
-            <ins title="nlp 2.00">131ν</ins>
+            <ins class="alt" title="nlp 2.00">131</ins>
+          </span>
+        </span>
+        <span id="w_323_1" class="ocr_word" title="bbox 2142 2014 2212 2051">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">v</ins>
           </span>
         </span>
       </span>
@@ -2673,7 +2678,7 @@
         </span>
         <span id="w_513" class="ocr_word" title="bbox 1340 3132 1380 3166" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">19—21</ins>
+            <ins title="nlp 2.00">—21</ins>
           </span>
         </span>
         <span id="w_514" class="ocr_word" title="bbox 1501 3133 1689 3178" lang="grc">
