--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0409.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0409.html
@@ -1145,9 +1145,14 @@
             <ins class="alt" title="nlp 1.00">ἑπτὰ</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 1163 1392 1243 1448">
+        <span id="w_220_0" class="ocr_word" title="bbox 1163 1392 1243 1448">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τὰ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὰ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 1163 1392 1243 1448">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 1266 1410 1481 1448" lang="grc">
@@ -1168,11 +1173,6 @@
         <span id="w_224" class="ocr_word" title="bbox 1636 1411 1732 1435" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑπτά</ins>
-          </span>
-        </span>
-        <span id="w_225" class="ocr_word" title="bbox 1755 1396 1859 1449" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀριθμὸς</ins>
           </span>
         </span>
       </span>
@@ -1266,7 +1266,7 @@
         </span>
         <span id="w_244" class="ocr_word" title="bbox 875 1531 957 1584" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_245" class="ocr_word" title="bbox 988 1547 1059 1585" lang="grc">
@@ -1405,7 +1405,7 @@
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1703 1672 1768 1725" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκ</ins>
+            <ins title="nlp 2.00">(ἐκ</ins>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1790 1685 1858 1724" lang="grc">
@@ -1866,7 +1866,7 @@
         </span>
         <span id="w_360" class="ocr_word" title="bbox 748 2220 847 2274" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τρὶς</ins>
+            <ins title="nlp 2.00">(τρὶς</ins>
           </span>
         </span>
         <span id="w_361" class="ocr_word" title="bbox 884 2221 953 2275" lang="grc">
@@ -2630,7 +2630,7 @@
         </span>
         <span id="w_506" class="ocr_word" title="bbox 1069 3086 1130 3128" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ἄις]</ins>
+            <ins title="nlp 2.00">δὶς]</ins>
           </span>
         </span>
         <span id="w_507" class="ocr_word" title="bbox 1156 3085 1214 3119" lang="grc">
