--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0367.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0367.html
@@ -1314,7 +1314,7 @@
         </span>
         <span id="w_251" class="ocr_word" title="bbox 359 2017 594 2073" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κοινότερον</ins>
+            <ins title="nlp 2.00">(κοινότερον</ins>
           </span>
         </span>
         <span id="w_252" class="ocr_word" title="bbox 626 2034 696 2073" lang="grc">
@@ -1961,7 +1961,7 @@
         </span>
         <span id="w_378" class="ocr_word" title="bbox 1582 2836 1662 2879">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τι οm.)</ins>
+            <ins title="nlp 2.00">τι οm.)</ins>
           </span>
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1684 2836 1712 2869">
